--- a/3.html
+++ b/3.html
@@ -1,6 +1,6 @@
 <HTML>
 
-<a href="0.html"><font color="#000000" size="5">首頁</font></a>
+<a href="index.html"><font color="#000000" size="5">首頁</font></a>
 <a href="1.html"><font color="#000000" size="5">迅龍</font></a>
 <a href="2.html"><font color="#000000" size="5">雷狼龍</font></a>
 <a href="3.html"><font color="#000000" size="5">電龍</font></a><br>
